Add Draft of repo

--- a/Projects/AssetsManagement/BackEnd/AssetsManagement/AssetsManagement/AssetsManagement.csproj
+++ b/Projects/AssetsManagement/BackEnd/AssetsManagement/AssetsManagement/AssetsManagement.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>AssetsManagement</RootNamespace>
     <AssemblyName>AssetsManagement</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -90,6 +90,12 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataRepo\DataRepo.csproj">
+      <Project>{B01A59AA-8A14-4740-9EC1-420CD6FE3286}</Project>
+      <Name>DataRepo</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
