--- a/Projects/AssetsManagement/docker-compose.yml
+++ b/Projects/AssetsManagement/docker-compose.yml
@@ -10,4 +10,5 @@ services:
       - "9124:8081"
     volumes:
       - ./BackEnd/AssetsManagement/AssetsManagement/:/var/www/assets-management/
+      - ./home/edward/Development/BoilerplateForPadawans/Projects/AssetsManagement/FrontEnd/AssetsManagementUI/:/var/www/assets-management-UI/
       
